# AutoTests

./: browser-state.json  conftest.py  main.py  new_context.json  new_session.json  pytest.ini
PycharmProjects/Autotests/shop-tests/: .gitignore  pyproject.toml  readme.md
PycharmProjects/Autotests/shop-tests/befree/api_model/: api.py  config_orders.py  customer.py  db_connection.py  listings.py  product.py  public.py  stickers.py
PycharmProjects/Autotests/shop-tests/befree/api_model/catalog/: __init__.py  utils.py
PycharmProjects/Autotests/shop-tests/befree/api_model/cocreate/: __init__.py  enums.py  utils.py
PycharmProjects/Autotests/shop-tests/befree/api_model/config/: __init__.py  headers.py  utils.py
PycharmProjects/Autotests/shop-tests/befree/api_model/esb/: __init__.py  api_esb.py  endpoints.py  payloads.py
PycharmProjects/Autotests/shop-tests/befree/ui_model/: __init__.py  core.py
PycharmProjects/Autotests/shop-tests/deploy/: .env_qa_01  .env_qa_02  .env_qa_03  .env_qa_04
PycharmProjects/Autotests/shop-tests/tests/: conftest.py
PycharmProjects/Autotests/shop-tests/tests/cocreate_public/: test_user.py
PycharmProjects/Autotests/shop-tests/tests/config/: test_config.py
PycharmProjects/Autotests/shop-tests/tests/public/: test_cart.py  test_general.py  test_listings.py  test_menu.py  test_something.py  test_user.py
PycharmProjects/Autotests/shop-tests/utils/: __init__.py  array.py  attachments.py  auth.py  base_session.py  data_generation.py  database.py  files.py  helpers.py  loging.py
(+270 files in other folders)
